--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,28 +29,41 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.18
-        uses: actions/setup-go@v4
+      - name: Checkout PR
+        uses: actions/checkout@v2
         with:
-          go-version: 1.18
-        id: go
+          ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+      - name: Show Files
+        run: |
+          echo "Files in PR branch:"
+          ls -l $GITHUB_WORKSPACE
 
-      - name: Check License
-        uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "Files in target branch:"
+          git checkout main
+          ls -l $GITHUB_WORKSPACE
+      # - name: Set up Go 1.18
+      #   uses: actions/setup-go@v4
+      #   with:
+      #     go-version: 1.18
+      #   id: go
 
-      - name: Lint Codes
-        run: make lint
+      # - name: Check out code into the Go module directory
+      #   uses: actions/checkout@v3
 
-      - name: Test
-        run: make test
+      # - name: Check License
+      #   uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build
-        run: make build
+      # - name: Lint Codes
+      #   run: make lint
 
-      - name: Build Docker Image
-        run: make docker
+      # - name: Test
+      #   run: make test
+
+      # - name: Build
+      #   run: make build
+
+      # - name: Build Docker Image
+      #   run: make docker
