--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,25 +30,13 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Show Current Directory
-        run: |
-          echo "Current Directory: $(pwd)"
-          ls -l
-
-    
-      - name: Checkout PR
-        uses: actions/checkout@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
-
-      - name: Show Files
+          ref: mainCopy
+      - name: Print current working directory
         run: |
-          echo "Files in PR branch:"
-          ls -l $GITHUB_WORKSPACE
-
-          echo "Files in target branch:"
-          git checkout main
-          ls -l $GITHUB_WORKSPACE
+          pwd
       # - name: Set up Go 1.18
       #   uses: actions/setup-go@v4
       #   with:
