--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Check out code into the Go module directory
-          uses: actions/checkout@latest
+          uses: actions/checkout@v1.0.0
           with:
             ref: mainCopy
         - name: Print current working directory
