--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
         - name: Check out code into the Go module directory
           uses: actions/checkout@v1.0.0
           with:
-            ref: mainCopy
+            ref: main
         - name: Print current working directory
           run: |
             pwd
