--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
           uses: actions/checkout@v1.0.0
           with:
             ref: main
-            path: /home/runner/work/old
+            path: /home/runner/work
         - name: Print current working directory
           run: |
             pwd
