--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,11 +30,15 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-        - name: Check out code into the Go module directory
-          uses: actions/checkout@v1.0.0
+        # - name: Check out code into the Go module directory
+        #   uses: actions/checkout@v1.0.0
+        #   with:
+        #     ref: main
+        #     path: /home/runner
+        - name: Run E2E Test
+          uses: apache/skywalking-infra-e2e@main      # always prefer to use a revision instead of `main`.
           with:
-            ref: main
-            path: /home/runner
+            e2e-file: e2e.yaml 
         - name: Print current working directory
           run: |
             pwd
