--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,10 +35,10 @@ jobs:
         #   with:
         #     ref: main
         #     path: /home/runner
-        # - name: Run E2E Test
-        #   uses: apache/skywalking-infra-e2e@main      # always prefer to use a revision instead of `main`.
-        #   with:
-        #     e2e-file: /home/runner/github-test/e2e.yaml 
+        - name: Run E2E Test
+          uses: apache/skywalking-infra-e2e@main      # always prefer to use a revision instead of `main`.
+          with:
+            e2e-file: /home/runner/github-test/github-test/examples/compose/e2e.yaml 
         - name: Print current working directory
           run: |
             pwd
