--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
           - name: Set up Docker
-            uses: docker/setup-docker@v1
+            uses: docker/build-push-action@v4
       
           - name: Run Docker container
             run: docker run -p 8080:80 kennethreits/httpbin
