--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,10 +33,10 @@ jobs:
           # - name: Set up Docker
           #   uses: docker/cli@v2
           - name: Pull Docker image
-            run: docker pull kennethreits/httpbin
+            run: docker pull kennethreitz/httpbin
       
           - name: Run Docker container
-            run: docker run -p 8080:80 kennethreits/httpbin
+            run: docker run -p 8080:80 kennethreitz/httpbin
         # - name: Check out code into the Go module directory
         #   uses: actions/checkout@v1.0.0
         #   with:
