--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,8 @@ jobs:
 
           - name: Test httpbin
             run: |
-              curl -s localhost:8080/get -H "accept:application/json"
+              # curl -s localhost:8080/get -H "accept:application/json"
+              curl https://www.baidu.com
         # - name: Check out code into the Go module directory
         #   uses: actions/checkout@v1.0.0
         #   with:
