--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,18 +30,18 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-          - name: Pull Docker image
-            run: docker pull kennethreitz/httpbin
+          # - name: Pull Docker image
+          #   run: docker pull kennethreitz/httpbin
       
-          - name: Run Docker container
-            run: docker run -d -p 8080:80 kennethreitz/httpbin
+          # - name: Run Docker container
+          #   run: docker run -d -p 8080:80 kennethreitz/httpbin
 
-          - name: Wait for container to start
-            run: sleep 5
+          # - name: Wait for container to start
+          #   run: sleep 5
 
-          - name: Test httpbin
-            run: |
-              curl -s 127.0.0.1:8080/get -H "accept:application/json"
+          # - name: Test httpbin
+          #   run: |
+          #     curl -s 127.0.0.1:8080/get -H "accept:application/json"
 
           - name: Check out code into the Go module directory
             uses: actions/checkout@v3
