--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,68 +30,38 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-          # - name: Pull Docker image
-          #   run: docker pull kennethreitz/httpbin
-      
-          # - name: Run Docker container
-          #   run: docker run -d -p 8080:80 kennethreitz/httpbin
+            
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v4
+        with:
+          go-version: 1.18
+        id: go
 
-          # - name: Wait for container to start
-          #   run: sleep 5
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
 
-          # - name: Test httpbin
-          #   run: |
-          #     curl -s 127.0.0.1:8080/get -H "accept:application/json"
+      - name: Build
+        run: make build
 
-          - name: Check out code into the Go module directory
-            uses: actions/checkout@v3
+      - name: Pull Docker image
+        run: docker pull kennethreitz/httpbin
+  
+      - name: Run Docker container
+        run: docker run -d -p 8080:80 kennethreitz/httpbin
+  
+      - name: Wait for container to start
+        run: sleep 5
+  
+      - name: Test httpbin
+        run: |
+          curl -s 127.0.0.1:8080/get -H "accept:application/json"
 
-          - name: Run E2E Test
-            uses: chunriyeqiongsaigao/skywalking-infra-e2e@main    
-            with:
-                e2e-file: /home/runner/work/github-test/github-test/examples/compose/e2e.yaml
-              # e2e-file: /home/runner/work/_actions/apache/skywalking-infra-e2e/main/examples/compose/e2e.yaml 
+
+      - name: Run E2E Test
+        uses: chunriyeqiongsaigao/skywalking-infra-e2e@main    
+        with:
+          # e2e-file: /home/runner/work/github-test/github-test/examples/compose/e2e.yaml
+           e2e-file: /home/runner/work/_actions/chunriyeqiongsaigao/skywalking-infra-e2e/main/test/e2e/e2e.yaml 
 
               
-        # - name: Check out code into the Go module directory
-        #   uses: actions/checkout@v1.0.0
-        #   with:
-        #     ref: main
-        #     path: /home/runner
-        
-        # - name: Run E2E Test
-        #   uses: apache/skywalking-infra-e2e@main      # always prefer to use a revision instead of `main`.
-        #   with:
-        #     e2e-file: /home/runner/work/_actions/apache/skywalking-infra-e2e/main/examples/compose/e2e.yaml 
-        # - name: Print current working directory
-        #   run: |
-        #     pwd
-        # - name: Show ls -R
-        #   run: |
-        #     ls -R /home/runner/work/github-test/github-test
-            
-      # - name: Set up Go 1.18
-      #   uses: actions/setup-go@v4
-      #   with:
-      #     go-version: 1.18
-      #   id: go
-
-      # - name: Check out code into the Go module directory
-      #   uses: actions/checkout@v3
-
-      # - name: Check License
-      #   uses: apache/skywalking-eyes@ec88b7d850018c8983f87729ea88549e100c5c82
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Lint Codes
-      #   run: make lint
-
-      # - name: Test
-      #   run: make test
-
-      # - name: Build
-      #   run: make build
-
-      # - name: Build Docker Image
-      #   run: make docker
+       
