--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,12 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
 
+      - name: Set up Go 1.18
+        uses: actions/setup-go@v4
+        with:
+         go-version: 1.18
+         cache-dependency-path: ${{ github.action_path }}/go.sum
+
       - name: Build
         run: make build
 
