--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,9 @@ jobs:
          go-version: 1.18
          cache-dependency-path: ${{ github.action_path }}/go.sum
 
+      - shell: bash
+        run: make -C $GITHUB_ACTION_PATH install DESTDIR=/usr/local/bin
+
       - name: Build
         run: make build
 
