--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,9 @@ jobs:
          go-version: 1.18
          cache-dependency-path: ${{ github.action_path }}/go.sum
 
+      - name: Run go mod tidy
+        run: go mod tidy
+
       - name: Test
         run: make test
 
